test_suite/alan-2022-examples/failing/002220_mutation.alan
source g02 begin get h[5 i9 := 9 end
